--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=QuestionDB
+
+#spring.mvc.view.prefix:classpath:/templates/
+#spring.mvc.view.suffix: .html
+
+
