--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,11 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=QuestionDB
 
+spring.thymeleaf.mode=LEGACYHTML5
+spring.thymeleaf.cache=false
+
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+
 #spring.mvc.view.prefix:classpath:/templates/
 #spring.mvc.view.suffix: .html
 
