--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.data.mongodb.database=QuestionDB
 
 spring.thymeleaf.mode=LEGACYHTML5
 spring.thymeleaf.cache=false
+#server.context-path=/question-repo
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
