updated header to make use of thymeleaf

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 #spring.mvc.view.prefix:classpath:/templates/
 #spring.mvc.view.suffix: .html
 
-
+server.port = 8090
