--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.thymeleaf.cache=false
 
 logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
 
-#spring.mvc.view.prefix:classpath:/templates/
-#spring.mvc.view.suffix: .html
+spring.mvc.view.prefix:classpath:/templates/
+spring.mvc.view.suffix: .html
 
 server.port = 8090
